# llm.cpp

./: .gitignore  CMakeLists.txt  build.sh  execute.sh  run_build.sh
include/: concurrent_hashmap.hpp  ops.hpp  tensor.hpp  token_id_map.hpp  token_vocab_map.hpp  tokenizer.hpp  transformer.hpp
include/transformer/: attention_layer.hpp  config.hpp  ffn_layer.hpp  kv_cache.hpp  transformer.hpp  weights.hpp
src/: concurrent_hashmap.cpp  main.cpp  ops.cpp  tensor.cpp  token_id_map.cpp  token_vocab_map.cpp  tokenizer.cpp  transformer.cpp
src/transformer/: attention_layer.cpp  ffn_layer.cpp  kv_cache.cpp  transformer.cpp
tools/: convert_weights.py  requirements.txt
